--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+*.csv filter=lfs diff=lfs merge=lfs -text
+/Trip_Dataset/data_2014/*.csv filter=lfs diff=lfs merge=lfs -text
