--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-*.csv filter=lfs diff=lfs merge=lfs -text
-/Trip_Dataset/data_2014/*.csv filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
